# s2m2_ros

./: README.md  package.xml  setup.cfg  setup.py
config/: s2m2_vs_rs435_depth_pc.rviz
s2m2_ros/: s2m2_node.py
