<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>s2m2_ros</name>
  <version>0.0.0</version>
  <description>ROS2 node for s2m2 stereo depth estimation</description>
  <maintainer email="mederic.fourmy@gmail.com">Mederic Fourmy</maintainer>
  <license>CC BY-NC 4.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
